# SOH_estimited

./: .gitignore  CNN_GRU_predict.ipynb  Capacity_pred.py  Features.csv  GRU_predict.ipynb  LSTM_predict.ipynb  LSTM_t.py  Readme.md  cifar_net.pth  data_process.ipynb  feature_extract.ipynb  pyproject.toml  requirements.txt  使用RNN網路進行容量預估.md
features/charge/B0005/: B0005_Features.csv  B0005_capacity.csv
features/charge/B0006/: B0006_Features.csv  B0006_capacity.csv
features/charge/B0007/: B0007_Features.csv  B0007_capacity.csv
features/charge/B0018/: B0018_Features.csv  B0018_capacity.csv
features/charge/B0025/: B0025_Features.csv  B0025_capacity.csv
features/charge/B0026/: B0026_Features.csv  B0026_capacity.csv
features/charge/B0027/: B0027_Features.csv  B0027_capacity.csv
features/charge/B0028/: B0028_Features.csv  B0028_capacity.csv
features/charge/B0029/: B0029_Features.csv  B0029_capacity.csv
features/charge/B0030/: B0030_Features.csv  B0030_capacity.csv
features/charge/B0031/: B0031_Features.csv  B0031_capacity.csv
features/charge/B0032/: B0032_Features.csv  B0032_capacity.csv
features/charge/B0033/: B0033_Features.csv  B0033_capacity.csv
features/charge/B0034/: B0034_Features.csv  B0034_capacity.csv
features/charge/B0036/: B0036_Features.csv  B0036_capacity.csv
features/charge/B0038/: B0038_Features.csv  B0038_capacity.csv
features/charge/B0039/: B0039_Features.csv  B0039_capacity.csv
features/charge/B0040/: B0040_Features.csv  B0040_capacity.csv
features/charge/B0041/: B0041_Features.csv  B0041_capacity.csv
(+30 files in other folders)
