[tool.poetry]
name = "soh-estimited"
version = "0.1.0"
description = ""
authors = ["apple860601 <apple860601@gmail.com>"]
readme = "README.md"
packages = [{include = "soh_estimited"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
numpy = "^1.24.3"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
